--- a/main.tex
+++ b/main.tex
@@ -1097,12 +1097,12 @@ The following observations are characteristic for this algorithm:
   \centering
   \begin{tiny}
     \begin{tabular}{@{ }l@{ }|@{ }r@{ }}
-      \rowcolor{tabhcolor}\rowstyle{\bfseries}
+      \rowcolor{tabhcolor}
       Binary coding                                                                                    &  Type     \\ 
       \hline
       0:0:0:0:0:0:294:0:0:0:0:32:0:0:0:0:0:0:0:0:0:0:0:32:0:0:0:0:0:0:0:0:0:0:0:32:0:0:0:0:0:0:0:0:0:0 &  centroid \\ 
       \multicolumn{2}{l}{}                                                                             \\ 
-      \rowcolor{tabhcolor}\rowstyle{\bfseries}
+      \rowcolor{tabhcolor}
       Binary coding                                                                                    &  Count    \\ 
       \hline
       0:0:0:0:0:0:359:96:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0   &  95       \\ 
@@ -1151,13 +1151,13 @@ The following is characteristic for this algorithm:
   \centering
   \begin{tiny}
     \begin{tabular}{@{ }l@{ }|@{ }r@{ }}
-      \rowcolor{tabhcolor}\rowstyle{\bfseries}
+      \rowcolor{tabhcolor}
       Binary coding                                                                          &  Type     \\ 
       \hline
       272:272:272:272:272:278:286:272:272:272:272:272:272:272:272:272:272:272:272            &  centroid \\ 
       \multicolumn{2}{l}{}                                                                   \\ 
       \hline
-      \rowcolor{tabhcolor}\rowstyle{\bfseries}
+      \rowcolor{tabhcolor}
       Binary coding                                                                          &  Count    \\ 
       272:272:272:272:272:278:286:272:272:272:272:272:272:272:272:272:272:272:272            &  528      \\ 
       272:272:272:272:272:406:286:272:272:272:272:272:272:272:272:272                        &  96       \\ 
@@ -1208,13 +1208,13 @@ Cluster characteristics:
   \begin{tiny}
     \begin{tabular}{@{ }l@{ }@{ }l@{ }@{ }l@{ }@{ }l@{ }|@{ }r@{ }}
       \rowcolor{tabhcolor}
-      \multicolumn{4}{@{ }l|@{ }}{\rowstyle{\bfseries}Hexadecimal coding} & \\
-      \rowcolor{tabhcolor}\rowstyle{\bfseries}
+      \multicolumn{4}{@{ }l|@{ }}{Hexadecimal coding} & \\
+      \rowcolor{tabhcolor}
       md\_file\_create  & md\_file\_delete  & md\_mod           & read\_calls       & Type     \\ 
       \hline
       0:...:0           & 0:0:0:1:0:0:0:0:0 & 0:...:0           & 0:...:0           & centroid \\ 
       \multicolumn{5}{l}{}\\
-      \rowcolor{tabhcolor}\rowstyle{\bfseries}
+      \rowcolor{tabhcolor}
       md\_file\_create  & md\_file\_delete  & md\_mod           & read\_calls       & Count    \\ 
       \hline
       0:...:0           & 0:0:0:0:0:0:1:0:0 & 0:...:0           & 0:...:0           & 606      \\ 
@@ -1264,13 +1264,13 @@ Clustering with SIM=0.99 results in clusters that have equal job lengths.
   \begin{tiny}
     \begin{tabular}{@{ }l@{ }@{ }l@{ }@{ }l@{ }|@{ }r@{ }}
       \rowcolor{tabhcolor}
-      \multicolumn{3}{@{ }l|@{ }}{\rowstyle{\bfseries}Hexadecimal coding} &            \\ 
-      \rowcolor{tabhcolor}\rowstyle{\bfseries}
+      \multicolumn{3}{@{ }l|@{ }}{Hexadecimal coding} &            \\ 
+      \rowcolor{tabhcolor}
       md\_file\_delete     &  md\_mod   & md\_other & Type     \\ 
       \hline
       0:\dots:0            &  0:0:1:0   & 0:0:1:0   & centroid \\ 
       \multicolumn{4}{l}{} \\ 
-      \rowcolor{tabhcolor}\rowstyle{\bfseries}
+      \rowcolor{tabhcolor}
       md\_file\_delete     &  md\_mod   & md\_other & Count    \\ 
       \hline
       0:\dots:0            &  0:\dots:0 & 0:0:1:0   & 5,010    \\ 
@@ -1325,13 +1325,13 @@ Cluster characteristics:
   \begin{tiny}
     \begin{tabular}{@{ }l@{ }@{ }l@{ }|@{ }r@{ }}
       \rowcolor{tabhcolor}
-      \multicolumn{2}{@{ }l|@{ }}{\rowstyle{\bfseries}Hexadecimal coding} &              \\ 
-      \rowcolor{tabhcolor}\rowstyle{\bfseries}
+      \multicolumn{2}{@{ }l|@{ }}{Hexadecimal coding} &              \\ 
+      \rowcolor{tabhcolor}
       md\_file\_delete     &  md\_mod     & Type     \\ 
       \hline
       4:0:0:0:0:0          &  4:0:0:0:0:0 & centroid \\ 
       \multicolumn{3}{l}{} \\ 
-			\rowcolor{tabhcolor}\rowstyle{\bfseries}
+			\rowcolor{tabhcolor}
       md\_file\_delete     &  md\_mod     & Count    \\ 
       \hline
       4                    &  4           & 2329     \\ 
@@ -1396,13 +1396,13 @@ Information related to the cluster is in \Cref{tab:use_case:bin_all:stats}, \Cre
   \centering
   \begin{tiny}
     \begin{tabular}{@{ }l@{ }|@{ }r@{ }}
-      \rowcolor{tabhcolor}\rowstyle{\bfseries}
+      \rowcolor{tabhcolor}
       Binary coding                                                                                          &  Type     \\ 
       \hline
       192:192:192:192:192:192:196:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64:64 &  job      \\ 
       192:192:192:192:192:192:192:192:192:192:192:454:230:192:192:192:192:192:192:192:192:192:192:192        &  centroid \\ 
       \multicolumn{2}{l}{}                                                                                   \\ 
-      \rowcolor{tabhcolor}\rowstyle{\bfseries}
+      \rowcolor{tabhcolor}
       Binary coding                                                                                          &  Count    \\ 
       \hline
       192:192:192:192:192:454:198:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192        &  5        \\ 
@@ -1446,13 +1446,13 @@ Information related to the cluster is in \Cref{tab:use_case:bin_aggzeros:stats},
   \centering
   \begin{tiny}
     \begin{tabular}{@{ }l@{ }|@{ }r@{ }}
-      \rowcolor{tabhcolor}\rowstyle{\bfseries}
+      \rowcolor{tabhcolor}
       Binary coding                                                                                             &  Type     \\ 
       \hline
       192:192:192:192:192:192:196:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64:64    &  job      \\ 
       511:238:192:510:192:224:228:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64:64        &  centroid \\ 
       \multicolumn{2}{l}{}                                                                                      \\ 
-      \rowcolor{tabhcolor}\rowstyle{\bfseries}
+      \rowcolor{tabhcolor}
       Binary coding                                                                                             &  Count    \\ 
       \hline
       0:224:192:192:192:192:228:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64:64          &  1        \\ 
@@ -1497,14 +1497,14 @@ Information related to the cluster is in \Cref{tab:use_case:hex_lev:stats}, \Cre
   \begin{tiny}
     \begin{tabular}{@{ }l@{ }@{ }l@{ }|@{ }r@{ }}
       \rowcolor{tabhcolor}
-      \multicolumn{2}{@{ }l|@{ }}{\rowstyle{\bfseries}Hexadecimal coding} & \\
-      \rowcolor{tabhcolor}\rowstyle{\bfseries}
+      \multicolumn{2}{@{ }l|@{ }}{Hexadecimal coding} & \\
+      \rowcolor{tabhcolor}
       md\_other                                           &  read\_calls                                           & Type     \\ 
       \hline
       0:\dots:0                                           &  3:3:8:8:8:5:6:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & job      \\ 
       0:\dots:0                                           &  8:8:8:8:8:2:6:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & centroid \\ 
       \multicolumn{3}{l}{}                                \\ 
-      \rowcolor{tabhcolor}\rowstyle{\bfseries}      md\_other                                           &  read\_calls                                           & Count    \\ 
+      \rowcolor{tabhcolor}      md\_other                                           &  read\_calls                                           & Count    \\ 
       \hline
       0:\dots:0                                           &  0:0:0:0:0:0:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8   & 4        \\ 
       0:\dots:0                                           &  8:8:8:8:8:2:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8   & 4        \\ 
@@ -1548,15 +1548,15 @@ Information related to the cluster is in \Cref{tab:use_case:hex_native:stats}, \
   \centering
   \begin{tiny}
     \begin{tabular}{@{ }l@{ }|@{ }r@{ }}
-      \rowcolor{tabhcolor}\rowstyle{\bfseries}
+      \rowcolor{tabhcolor}
       Hexadecimal coding & \\
-      \rowcolor{tabhcolor}\rowstyle{\bfseries}
+      \rowcolor{tabhcolor}
       read\_calls                                           & Type     \\ 
       \hline	
       3:3:8:8:8:5:6:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & job      \\ 
       8:8:8:8:8:2:4:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & centroid \\ 
       \multicolumn{2}{l}{}\\ 
-			\rowcolor{tabhcolor}\rowstyle{\bfseries}
+			\rowcolor{tabhcolor}
       read\_calls                                           & Count    \\ 
       \hline	
       8:8:8:8:8:3:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & 3        \\ 
@@ -1599,15 +1599,15 @@ Information\ related to the cluster is \Cref{tab:use_case:pm_quant:stats}, \Cref
   \centering
   \begin{tiny}
     \begin{tabular}{@{ }l@{ }|@{ }r@{ }}
-      \rowcolor{tabhcolor}\rowstyle{\bfseries}
+      \rowcolor{tabhcolor}
       Hexadecimal coding & \\
-      \rowcolor{tabhcolor}\rowstyle{\bfseries}
+      \rowcolor{tabhcolor}
       read\_calls                                           & Type     \\ 
       \hline
       3:3:8:8:8:5:6:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & job      \\ 
       8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8   & centroid \\ 
       \multicolumn{2}{l}{}\\
-      \rowcolor{tabhcolor}\rowstyle{\bfseries}
+      \rowcolor{tabhcolor}
       read\_calls                                           & Count    \\ 
       \hline
       8:8:8:8:8:2:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8   & 4        \\ 
