--- a/main.tex
+++ b/main.tex
@@ -839,7 +839,9 @@ match_write_bytes = [(match:0; len:1)]
 \paragraph{Similarity}
 Next, the similarity for coding with different lengths must be adjusted. Similarity between two jobs is the sum of matches divided by the sum of lengths of the longer phases. In this example, we get a similarity of 17$\%$ .
 
+\begin{equation}
 similarity = (0 + 1 + 8/9 + 2/3 + 1 + 0 + 1) / (5 + 4 + 1 + 7 + 3 + 1) = 0.17
+\end{equation}
 
 \subsection{Data}
 From the perspective of this work, analysis of non-I/O-intensive jobs (zero-jobs) has no advantage.
